--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@fortawesome/vue-fontawesome": "^0.1.8",
     "axios": "^0.19.0",
     "core-js": "^2.6.10",
+    "dayjs": "^1.8.17",
     "element-ui": "^2.12.0",
     "headroom.js": "^0.10.3",
-    "node-sass": "^4.13.0",
     "nprogress": "^0.2.0",
     "sanitize.css": "^11.0.0",
-    "sass-loader": "^8.0.0",
+    "sass": "^1.52.2",
+    "sass-loader": "^10.2.1",
     "sweetalert2": "^8.19.0",
     "vue": "^2.6.10",
     "vue-carousel": "^0.18.0",
-    "vue-gtm": "^2.2.0",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
@@ -33,7 +33,9 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "node-sass": "^6.0.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.0.0"
   },
   "eslintConfig": {
     "root": true,
